[tool.poetry]
name = "exogroup-chtop"
version = "0.1.0"
description = "s A top-like utility for real-time ClickHouse queries monitoring."
authors = ["EXADS <root@exads.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
chtop = "exogroup_chtop.chtop:main"
